<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.configuracaopersonagem.PersonagemActivity">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/label_titulo"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/rlTop"
        android:layout_above="@+id/rlBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_sexo" />

            <RadioGroup
                android:weightSum="1"
                android:orientation="horizontal"
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_weight="0.5"
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_male" />

                <RadioButton
                    android:layout_weight="0.5"
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_female" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_class" />

            <Spinner
                android:id="@+id/spJobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/classes">
            </Spinner>

            <ImageView
                android:id="@+id/ivJobs"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"/>

            <TextView
                android:src="@drawable/dwarf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_forca"/>

            <TextView
                android:id="@+id/tvForca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <SeekBar
                android:id="@+id/sbForce"
                android:layout_width="match_parent"
                android:max="666"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_criar"/>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/label_botoom" />
    </RelativeLayout>

</RelativeLayout>
